move play queue to browse sidebar
also default to play now, with hover button to enqueue

--- a/src/comps/Environment.module.css
+++ b/src/comps/Environment.module.css
@@ -38,13 +38,20 @@
   color: var(--text-color) !important;
 }
 
-.wrapper :global(.ui.button):hover {
+.wrapper :global(.ui.button):hover,
+.wrapper :global(.ui.button):focus {
   background: var(--grey-color-3);
 }
 
 .wrapper :global(.ui.input) > input {
   color: var(--text-color);
   background: var(--bg-color);
+}
+
+.wrapper :global(.ui.input) > input:hover,
+.wrapper :global(.ui.input) > input:focus {
+  color: var(--text-color);
+  background: var(--grey-color-5);
 }
 
 .wrapper :global(.ui.input) > input:placeholder {
