--- a/src/comps/Browse.module.css
+++ b/src/comps/Browse.module.css
@@ -7,14 +7,16 @@
 .links {
   flex: 0 0 30px;
   display: flex;
-  justify-content: space-around;
+  justify-content: stretch;
 }
 
 .link,
 .activeLink {
+  flex-grow: 1;
+  text-align: center;
   font-size: 18px;
   font-weight: bold;
-  margin: 10px;
+  padding: 10px;
   cursor: pointer;
 }
 
@@ -24,6 +26,11 @@
 
 .activeLink {
   color: var(--feature-color);
+}
+
+.link:hover,
+.activeLink:hover {
+  background-color: var(--grey-color-5);
 }
 
 .videos {
