fine tune button color

--- a/src/comps/Environment.module.css
+++ b/src/comps/Environment.module.css
@@ -16,7 +16,7 @@
   --grey-color-1: #666;
   --grey-color-2: #999;
   --grey-color-3: #ccc;
-  --grey-color-4: #d4d4d4;
+  --grey-color-4: #e0e0e0;
   --grey-color-5: #e8e8e8;
 }
 
