--- a/src/comps/Browse.module.css
+++ b/src/comps/Browse.module.css
@@ -2,17 +2,21 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  align-items: stretch;
 }
 
 .links {
   flex: 0 0 30px;
   display: flex;
-  justify-content: stretch;
+  justify-content: center;
+  align-self: center;
+  width: 100%;
+  max-width: 1050px;
 }
 
 .link,
 .activeLink {
-  flex-grow: 1;
+  flex: 1 1 200px;
   text-align: center;
   font-size: 16px;
   font-weight: bold;
@@ -38,6 +42,9 @@
   flex: 1;
   overflow-y: auto;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .empty {
